--- a/static/style.css
+++ b/static/style.css
@@ -1,14 +1,25 @@
+.body{
+    margin: 0;
+}
 .parent {
     display: grid;
-    grid-template-columns: repeat(50, 1fr);
-    grid-template-rows: repeat(1, 1fr);
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(3, 1fr);
     grid-column-gap: 0px;
     grid-row-gap: 0px;
+    width: 100%;
     }
     
     .div1 { grid-area: 1 / 2 / 2 / 3; }
     .div2 { grid-area: 2 / 1 / 3 / 2; }
     .div3 { grid-area: 3 / 2 / 4 / 3; }
     .div4 { grid-area: 2 / 3 / 3 / 4; }
-    .div5 { grid-area: 1 / 4 / 2 / 5; }
-    .div6 { grid-area: 3 / 4 / 4 / 5; } 
+    .div5 { grid-area: 1 / 5 / 2 / 6; }
+    .div6 { grid-area: 2 / 4 / 3 / 5; }
+    .div7 { grid-area: 3 / 5 / 4 / 6; }
+    .div8 { grid-area: 2 / 6 / 3 / 7; }
+
+
+    .parent button{
+        width: 100%;
+    }
